--- a/EmguCvDoodle.csproj
+++ b/EmguCvDoodle.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Detector\HarrisCornerDetector.cs" />
     <Compile Include="Effect\Binary\BinaryEffect.cs" />
     <Compile Include="Effect\ContrastEffect.cs" />
     <Compile Include="Effect\GrayscaleEffect.cs" />
