--- a/EmguCvDoodle.csproj
+++ b/EmguCvDoodle.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Detector\HarrisCornerDetector.cs" />
+    <Compile Include="Detector\KeypointsMatching.cs" />
     <Compile Include="Effect\Binary\BinaryEffect.cs" />
     <Compile Include="Effect\ContrastEffect.cs" />
     <Compile Include="Effect\GrayscaleEffect.cs" />
